--- a/yf_news_scrape.ipynb
+++ b/yf_news_scrape.ipynb
@@ -158,6 +158,10 @@
     }
    ],
    "source": [
+    "now = date.now()\n",
+    "current_time = now.strftime(\"%H:%M:%S\")\n",
+    "print(\"Current Time =\", current_time)\n",
+    "\n",
     "print(date.today())\n",
     "YAHOO_NEWS_URL = 'https://finance.yahoo.com/topic/stock-market-news/'\n",
     "news_df = scrape_yahoo_news(YAHOO_NEWS_URL)"
