--- a/yf_news_scrape.ipynb
+++ b/yf_news_scrape.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "    print('Save the data to a CSV')\n",
     "    news_df = pd.DataFrame(news_data)\n",
-    "    news_df.to_csv(path, index=None)\n",
+    "    #news_df.to_csv(path, index=None)\n",
     "    \n",
     "    #This return statement is optional, we are doing this just analyze the final output \n",
     "    return news_df "
