--- a/yf_news_scrape.ipynb
+++ b/yf_news_scrape.ipynb
@@ -104,16 +104,16 @@
     "    if path is None:\n",
     "        path = 'stock-market-news.csv'\n",
     "        \n",
-    "    print('Requesting html page')\n",
+    "    #print('Requesting html page')\n",
     "    doc = get_page(url)\n",
     "\n",
-    "    print('Extracting news tags')\n",
+    "    #print('Extracting news tags')\n",
     "    news_list = get_news_tags(doc)\n",
     "\n",
-    "    print('Parsing news tags')\n",
+    "    #print('Parsing news tags')\n",
     "    news_data = [parse_news(news_tag) for news_tag in news_list]\n",
     "\n",
-    "    print('Save the data to a CSV')\n",
+    "    #print('Save the data to a CSV')\n",
     "    news_df = pd.DataFrame(news_data)\n",
     "    #news_df.to_csv(path, index=None)\n",
     "    \n",
