--- a/yf_news_scrape.ipynb
+++ b/yf_news_scrape.ipynb
@@ -940,7 +940,7 @@
     }
    ],
    "source": [
-    "news_df"
+    "news_df[news_df['Score'] > 0.8]"
    ]
   },
   {
@@ -7262,7 +7262,7 @@
     }
    ],
    "source": [
-    "news_df"
+    "news_df[news_df['Score'] > 0.8]"
    ]
   },
   {
@@ -9228,7 +9228,7 @@
     }
    ],
    "source": [
-    "news_df"
+    "news_df[news_df['Score'] > 0.8]"
    ]
   },
   {
@@ -9312,7 +9312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
