--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -1859,129 +1859,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>time</th>\n",
-       "      <th>headline</th>\n",
-       "      <th>url</th>\n",
-       "      <th>content</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Sentiment2</th>\n",
-       "      <th>Score2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Investor's Business Daily</td>\n",
-       "      <td>2 minutes ago</td>\n",
-       "      <td>Dow Jones Falls On Rate Jitters, Retail Sales; EV Outlook Dims; Solar ETF On Watch</td>\n",
-       "      <td>https://finance.yahoo.com/m/7594b1b9-631f-352d-805f-6faca85abbd5/dow-jones-falls-on-rate.html</td>\n",
-       "      <td>Dow Jones falls on hawkish Fed Powell remarks that signal a peak rate of 5.1%. Retail sales fall. EV stocks fall on dim outlook; TAN on watch</td>\n",
-       "      <td>NEGATIVE</td>\n",
-       "      <td>0.999635</td>\n",
-       "      <td>NEGATIVE</td>\n",
-       "      <td>0.999537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bloomberg</td>\n",
-       "      <td>7 minutes ago</td>\n",
-       "      <td>Nikola CEO Sells $17.2 Million of Stock in the Months Leading to Retirement</td>\n",
-       "      <td>https://finance.yahoo.com/news/nikola-ceo-sells-17-2-175637673.html</td>\n",
-       "      <td>(Bloomberg) -- Nikola Corp.’s former chief executive officer has sold more than a third of his direct stock holdings since the electric-truck maker announced his retirement after the end of this year.Most Read from BloombergIs Putin Finally Getting Smart About His Ukraine Disaster?Elon Musk’s Tesla Share Sales Approach the $40 Billion MarkPowell Says Fed Still Has a ‘Ways to Go’ After Half-Point HikeThis Is the World’s Biggest Stock Winner of 2022 With 1,600% GainMark Russell has offloaded just</td>\n",
-       "      <td>NEGATIVE</td>\n",
-       "      <td>0.947763</td>\n",
-       "      <td>NEGATIVE</td>\n",
-       "      <td>0.992225</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      source           time  \\\n",
-       "0  Investor's Business Daily  2 minutes ago   \n",
-       "1                  Bloomberg  7 minutes ago   \n",
-       "\n",
-       "                                                                             headline  \\\n",
-       "0  Dow Jones Falls On Rate Jitters, Retail Sales; EV Outlook Dims; Solar ETF On Watch   \n",
-       "1         Nikola CEO Sells $17.2 Million of Stock in the Months Leading to Retirement   \n",
-       "\n",
-       "                                                                                             url  \\\n",
-       "0  https://finance.yahoo.com/m/7594b1b9-631f-352d-805f-6faca85abbd5/dow-jones-falls-on-rate.html   \n",
-       "1                            https://finance.yahoo.com/news/nikola-ceo-sells-17-2-175637673.html   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               content  \\\n",
-       "0                                                                                                                                                                                                                                                                                                                                                                        Dow Jones falls on hawkish Fed Powell remarks that signal a peak rate of 5.1%. Retail sales fall. EV stocks fall on dim outlook; TAN on watch   \n",
-       "1  (Bloomberg) -- Nikola Corp.’s former chief executive officer has sold more than a third of his direct stock holdings since the electric-truck maker announced his retirement after the end of this year.Most Read from BloombergIs Putin Finally Getting Smart About His Ukraine Disaster?Elon Musk’s Tesla Share Sales Approach the $40 Billion MarkPowell Says Fed Still Has a ‘Ways to Go’ After Half-Point HikeThis Is the World’s Biggest Stock Winner of 2022 With 1,600% GainMark Russell has offloaded just   \n",
-       "\n",
-       "  Sentiment     Score Sentiment2    Score2  \n",
-       "0  NEGATIVE  0.999635   NEGATIVE  0.999537  \n",
-       "1  NEGATIVE  0.947763   NEGATIVE  0.992225  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "news_df.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "url = \"https://finviz.com/news.ashx\"\n",
+    "\n",
+    "\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
     "cookies = {\"CONSENT\": \"YES+cb.20210720-07-p0.en+FX+410\"}\n",
     "\n",
-    "for link in news_df['url']: \n",
-    "    req = Request(link, headers=headers)\n",
+    "req = Request(url, headers=headers)\n",
     "\n",
-    "    try:\n",
-    "        contents = urlopen(req).read() \n",
-    "        soup = BeautifulSoup(contents, features=\"html.parser\")\n",
+    "try:\n",
+    "    contents = urlopen(req).read() \n",
+    "    soup = BeautifulSoup(contents, features=\"html.parser\")\n",
     "\n",
-    "        sentence2 = []\n",
+    "    sentence2 = []\n",
     "\n",
-    "        for tag in soup.find_all('a'):\n",
+    "    for tag in soup.find_all('a href'):\n",
     "\n",
-    "            sentence = tag.text.split(\".\")\n",
-    "            sentence2.append(sentence)\n",
+    "        sentence = tag.text.split(\".\")\n",
+    "        sentence2.append(sentence)\n",
     "\n",
-    "    except urllib.error.HTTPError as err:\n",
-    "        print(err.code)\n",
+    "except urllib.error.HTTPError as err:\n",
+    "    print(err.code)\n",
     "\n",
-    "    except socket.timeout as se:\n",
-    "        print(\"socket timeout\")"
+    "except socket.timeout as se:\n",
+    "    print(\"socket timeout\")"
    ]
   }
  ],
