--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,9 @@
     "\n",
     "    sentence2 = []\n",
     "\n",
-    "    for tag in soup.find_all('a href'):\n",
+    "    project_href = [i['href'] for i in soup.find_all('a', href=True)]\n",
+    "\n",
+    "    for tag in soup.find_all('a', href=True):\n",
     "\n",
     "        sentence = tag.text.split(\".\")\n",
     "        sentence2.append(sentence)\n",
@@ -1888,6 +1890,47 @@
     "except socket.timeout as se:\n",
     "    print(\"socket timeout\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(sentence2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Headline'] = df[0]\n",
+    "df['Sentiment'] = -2\n",
+    "df = pd.DataFrame(list(zip(df['Headline'], df['Sentiment'])), columns=['Headline', 'Sentiment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = []\n",
+    "\n",
+    "for string in df['Headline']:\n",
+    "    i.append(count_words(string))\n",
+    "\n",
+    "df['word_count'] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
