--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -2052,9 +2052,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading pytorch_model.bin: 100%|██████████| 945M/945M [26:57<00:00, 612kB/s]   \n",
+      "Downloading tokenizer_config.json: 100%|██████████| 2.31k/2.31k [00:00<?, ?B/s]\n",
+      "Downloading spiece.model: 100%|██████████| 773k/773k [00:00<00:00, 1.03MB/s]\n",
+      "Downloading tokenizer.json: 100%|██████████| 2.31M/2.31M [00:03<00:00, 667kB/s]\n",
+      "Downloading special_tokens_map.json: 100%|██████████| 2.15k/2.15k [00:00<00:00, 1.39MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 512, but you input_length is only 15. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n"
+     ]
+    }
+   ],
    "source": [
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
     "cookies = {\"CONSENT\": \"YES+cb.20210720-07-p0.en+FX+410\"}\n",
@@ -2074,7 +2103,18 @@
     "            sentence = tag.text.split(\".\")\n",
     "            sentence2.append(sentence)\n",
     "\n",
-    "        \n",
+    "        summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")\n",
+    "\n",
+    "        summary = [None] * len(df)\n",
+    "        #sentiment_score = [None] * len(news_df)\n",
+    "        index = -1\n",
+    "        for sentence in sentence2:\n",
+    "            index+=1\n",
+    "            result = summary_pipeline(sentence[:512])[0]\n",
+    "            summary[index] = result['label']\n",
+    "            #sentiment_score[index] = result['score']\n",
+    "        df['Summary'] = summary\n",
+    "        #news_df['Score'] = sentiment_score\n",
     "\n",
     "    except urllib.error.HTTPError as err:\n",
     "        print(err.code)\n",
@@ -2082,6 +2122,13 @@
     "    except socket.timeout as se:\n",
     "        print(\"socket timeout\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
