--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -2073,17 +2073,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your max_length is set to 512, but you input_length is only 15. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
     "cookies = {\"CONSENT\": \"YES+cb.20210720-07-p0.en+FX+410\"}\n",
@@ -2111,7 +2103,7 @@
     "        for sentence in sentence2:\n",
     "            index+=1\n",
     "            result = summary_pipeline(sentence[:512])[0]\n",
-    "            summary[index] = result['label']\n",
+    "            summary[index] = result\n",
     "            #sentiment_score[index] = result['score']\n",
     "        df['Summary'] = summary\n",
     "        #news_df['Score'] = sentiment_score\n",
