--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -2075,7 +2075,93 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 512, but you input_length is only 15. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 7. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n",
+      "Your max_length is set to 512, but you input_length is only 10. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 3. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=1)\n",
+      "Your max_length is set to 512, but you input_length is only 14. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 19. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 11. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 4. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=2)\n",
+      "Your max_length is set to 512, but you input_length is only 7. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n",
+      "Your max_length is set to 512, but you input_length is only 10. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 3. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=1)\n",
+      "Your max_length is set to 512, but you input_length is only 54. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=27)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 53. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=26)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 38. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=19)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 25. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=12)\n",
+      "Your max_length is set to 512, but you input_length is only 12. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=6)\n",
+      "Your max_length is set to 512, but you input_length is only 9. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=4)\n",
+      "Your max_length is set to 512, but you input_length is only 39. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=19)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 26. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=13)\n",
+      "Your max_length is set to 512, but you input_length is only 10. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 14. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 24. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=12)\n",
+      "Your max_length is set to 512, but you input_length is only 20. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 11. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 13. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=6)\n",
+      "Your max_length is set to 512, but you input_length is only 17. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 26. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=13)\n",
+      "Your max_length is set to 512, but you input_length is only 63. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=31)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 18. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 15. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 7. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n",
+      "Your max_length is set to 512, but you input_length is only 10. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 3. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=1)\n",
+      "Your max_length is set to 512, but you input_length is only 14. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 19. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 11. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 4. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=2)\n",
+      "Your max_length is set to 512, but you input_length is only 7. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n",
+      "Your max_length is set to 512, but you input_length is only 16. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 2. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=1)\n",
+      "Your max_length is set to 512, but you input_length is only 21. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n",
+      "Your max_length is set to 512, but you input_length is only 10. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 5. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=2)\n",
+      "Your max_length is set to 512, but you input_length is only 11. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n",
+      "Your max_length is set to 512, but you input_length is only 8. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=4)\n",
+      "Your max_length is set to 512, but you input_length is only 15. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 6. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=3)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 17. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 20. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 21. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 19. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 23. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=11)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 19. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 16. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 17. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 16. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 18. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 18. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 22. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=11)\n",
+      "Your max_length is set to 512, but you input_length is only 17. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 18. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n",
+      "Your max_length is set to 512, but you input_length is only 14. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=7)\n",
+      "Your max_length is set to 512, but you input_length is only 17. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=8)\n",
+      "Your max_length is set to 512, but you input_length is only 19. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=9)\n"
+     ]
+    }
+   ],
    "source": [
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
     "cookies = {\"CONSENT\": \"YES+cb.20210720-07-p0.en+FX+410\"}\n",
