--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "        # update scroll height each time after scrolled, as the scroll height can change after we scrolled the page\n",
     "        scroll_height = driver.execute_script(\"return document.body.scrollHeight;\")  \n",
     "        # Break the loop when the height we need to scroll to is larger than the total scroll height\n",
-    "        if i == 20:\n",
+    "        if i == 10:\n",
     "            break \n",
     "\n",
     "    ##### Extract Reddit URLs #####\n",
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Each Articles"
+    "## Each Articles - From Finviz"
    ]
   },
   {
@@ -356,6 +356,19 @@
     "df['Sentiment'] = -2\n",
     "df = pd.DataFrame(list(zip(df['Headline'], df['Sentiment'])), columns=['Headline', 'Sentiment'])\n",
     "df['Links'] = project_href"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Links_True'] = list(\n",
+    "    map(lambda x: x.startswith('https'), df['Links']))\n",
+    "\n",
+    "df = df['Links_True'] == 'True'\n",
+    "df"
    ]
   },
   {
